--- a/senpick/app/templates/index.html
+++ b/senpick/app/templates/index.html
@@ -1,22 +1,17 @@
+{% extends "layout/base.html" %}
 {% load static %}
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
-    <link rel="stylesheet" href="{% static 'css/sidebar.css' %}">
-    <link rel="stylesheet" href="{% static 'css/sidebar2.css' %}">
-</head>
-<body>
-    <div style="display:flex;">
-        {% include "sidebar.html" %}
-        <div class="main-content">
-            <h1>Welcome to Django Home!</h1>
-            <img src="{% static 'images/test.png' %}" width="200">
-            <h2>Github Actions test 5</h2>
-            <script src="{% static 'js/script.js' %}"></script>
-        </div>
-        {% include "sidebar2.html" %}
-    </div>
-</body>
-</html>
+{% block title %}Senpick{% endblock %}
+
+{# 사이드바를 비우고 싶다면 해당 블록을 비워버리면 됩니다 #}
+{% block sidebar %}
+    {% include "layout/sidebar.html" %}
+{% endblock %}
+{% block content %}
+    <h1>Welcome to Django Home!</h1>
+    <img src="{% static 'images/test.png' %}" width="200">
+    <h2>Github Actions test 5</h2>
+{% endblock %}
+{% block sidebar2 %}
+    {% include "layout/sidebar2.html" %}
+{% endblock %}
