--- a/senpick/static/css/sidebar2.css
+++ b/senpick/static/css/sidebar2.css
@@ -56,7 +56,7 @@
     display: flex;
     align-items: center;
     gap: 12px;
-    padding: 10px;
+    padding: 8px 10px;
     font-size: 18px;
 
     -webkit-user-select: none;
