--- a/senpick/static/css/chat.css
+++ b/senpick/static/css/chat.css
@@ -70,10 +70,10 @@ body {
   margin: 12px auto 0 0;  /* 위, 오른쪽 auto(왼쪽 정렬), 아래, 왼쪽 0 */
   padding: 13px 16px;
 
-  background: #f3f5fa;
+  background: #ffffff;
   color: #252525;
 
-  border-radius: 15px 15px 15px 5px;
+  border-radius: 15px;
   box-shadow: 0 2px 10px rgba(44, 44, 44, 0.05);
 
   font-size: 15px;
@@ -84,7 +84,7 @@ body {
 /* 유저 메시지 (오른쪽 정렬) */
 .chat-msg.user {
   background: rgba(255, 233, 0, 0.18); /* 연노랑 배경 */
-  border-radius: 15px 15px 5px 15px;
+  border-radius: 15px;
 
   margin-left: auto;
   margin-right: 0;
