--- a/senpick/app/templates/sidebar2.html
+++ b/senpick/app/templates/sidebar2.html
@@ -28,6 +28,7 @@
         </button>
     </div>
 </div>
+<script src="{% static 'js/script.js' %}"></script>
 <script>
     // 사이드바 토글 기능
     const sidebarRight = document.getElementById("sidebar-right");
