--- a/senpick/static/css/stepper.css
+++ b/senpick/static/css/stepper.css
@@ -19,7 +19,7 @@ body {
   border-radius: 16px;
   box-shadow: 0 2px 10px rgba(44,44,44,0.10);
   padding: 22px 22px 20px 22px;
-  margin: 44px auto 12px auto;
+  margin: 40px auto 8px auto;
   font-size: 18px;
   color: #222;
   font-weight: 500;
@@ -120,7 +120,7 @@ body {
   top: -1px;
   width: 6px;
   height: 12px;
-  border: solid #222;
+  border: solid #ffffff;
   border-width: 0 2.2px 2.2px 0;
   transform: rotate(45deg);
   display: block;
