--- a/senpick/static/css/stepper.css
+++ b/senpick/static/css/stepper.css
@@ -57,7 +57,7 @@ body {
 .step-question {
   font-size: 16px;
   color: #434343;
-  margin-bottom: 16px;
+  /* margin-bottom: 16px; */
   font-weight: 500;
 }
 
