--- a/senpick/static/css/style.css
+++ b/senpick/static/css/style.css
@@ -136,3 +136,9 @@ button {
   font-size: 16px;
   color: #ccc;
 }
+@keyframes spin {
+  100% { transform: rotate(360deg); }
+}
+.spin {
+  animation: spin 2s linear infinite;
+}
