--- a/senpick/app/templates/chat.html
+++ b/senpick/app/templates/chat.html
@@ -47,25 +47,32 @@
       {
         title: "1/5",
         question: "누구의 선물을 준비하고 계신가요?",
-        options: ["가족", "친구", "연인·배우자", "직장", "학교·멘토", "지인·이웃", "반려동물", "기타"],
+        options: [ "부모", "형제", "친구", "연인/배우자", "직장 동료/상사", "지인", "스승/멘토", "아이/청소년", "기타"],
         type: "checkbox"
       },
       {
         title: "2/5",
-        question: "어떤 감정/분위기에 맞는 선물이 좋으세요?",
-        options: ["감동", "유쾌", "실용", "로맨틱", "감사", "응원"],
+        question: "받으실 분의 연령대를 선택해주세요.",
+        options: ["10대 이하", "10대", "20대", "30대", "40대", "50대", "60대 이상", "나이모름"],
         type: "checkbox"
       },
       {
         title: "3/5",
-        question: "선호하는 스타일이 있으신가요?",
-        options: ["모던", "러블리", "심플", "고급스러움", "트렌디", "기타"],
+        question: "받는분의 성별을 선택해주세요.",
+        options: ["남성", "여성", "선택 안함"],
         type: "checkbox"
       },
       {
         title: "4/5",
-        question: "예산을 선택해 주세요.",
-        options: ["3만원대", "5만원대", "7만원대", "10만원 이상"],
+        question:"어떤 기념일이나 특별한 날을 위한 선물인가요?",
+        options: ["생일",
+        "결혼/웨딩",
+        "승진/입사/퇴사",
+        "입학/졸업",
+        "감사/고마움",
+        "격려/응원",
+        "명절/연말/새해",
+        "그냥"],
         type: "checkbox"
       },
       {
@@ -310,7 +317,24 @@
             `<div class="chat-msg user">${input.value}</div>`
           );
           chatHistory.scrollTop = chatHistory.scrollHeight;
+          // 👇 로딩 스피너 & 메시지 (SVG 사용)
+    chatHistory.insertAdjacentHTML(
+      'beforeend',
+      `<div class="chat-loading" id="chat-loading-spin" style="display:flex;align-items:center;gap:8px;margin:12px 0 12px 0;">
+        <span style="display:inline-block;">
+        <svg width="20" height="21" viewBox="0 0 20 21" fill="none" xmlns="http://www.w3.org/2000/svg" style="animation: spin 1s linear infinite;">
+        <path fill-rule="evenodd" clip-rule="evenodd" d="M19.0108 11.3956C19.5375 11.5617 19.8299 12.1233 19.6638 12.65L19.4146 13.4405L19.0807 14.2466L18.6778 15.0204L18.209 15.7563L17.6779 16.4485L17.0885 17.0917L16.4452 17.6811L15.753 18.2123L15.0172 18.681L14.282 19.0637C13.7922 19.3188 13.1883 19.1284 12.9333 18.6385C12.6783 18.1486 12.8687 17.5447 13.3585 17.2897L14.0163 16.9473L14.6048 16.5724L15.1584 16.1476L15.6729 15.6761L16.1444 15.1617L16.5692 14.608L16.9441 14.0195L17.2663 13.4005L17.5334 12.7558L17.7563 12.0486C17.9224 11.5219 18.484 11.2295 19.0108 11.3956Z" fill="#2E2E2E"/>
+        <path fill-rule="evenodd" clip-rule="evenodd" d="M19.0966 9.43368C18.5574 9.55321 18.0234 9.21301 17.9039 8.67382L17.7434 7.94991L17.5336 7.28438L17.2665 6.63967L16.9443 6.02069L16.5694 5.43215L16.1445 4.87853L15.6731 4.36404L15.1586 3.89259L14.605 3.46778L14.0164 3.09284L13.3975 2.77062L12.7528 2.50357L12.0872 2.29373L11.4059 2.14269L10.7141 2.05161L10.0169 2.02117L9.31976 2.05161L8.62791 2.14269L7.94662 2.29373L7.28109 2.50357L6.63638 2.77062L6.0174 3.09283L5.42886 3.46778L4.87523 3.89259L4.36074 4.36403L3.8893 4.87853L3.46449 5.43215L3.08955 6.02069L2.76732 6.63967L2.50028 7.28437L2.29044 7.94992L2.1394 8.6312L2.04832 9.32305L2.01788 10.0202L2.04831 10.7174L2.1394 11.4092L2.29044 12.0905L2.50028 12.756L2.76732 13.4008L3.08955 14.0197L3.46449 14.6083L3.8893 15.1619L4.36075 15.6764L4.87524 16.1478L5.42885 16.5726L6.01741 16.9476L6.63638 17.2698L7.28107 17.5369L7.94662 17.7467L8.6279 17.8977L9.31975 17.9888L10.0605 18.0212C10.6123 18.0453 11.0401 18.5121 11.016 19.0638C10.9919 19.6156 10.5251 20.0434 9.9733 20.0193L9.14528 19.9831L8.28028 19.8692L7.42849 19.6804L6.5964 19.418L5.79034 19.0842L5.01645 18.6813L4.28061 18.2125L3.58844 17.6814L2.94518 17.092L2.35575 16.4487L1.82462 15.7565L1.35584 15.0207L0.952983 14.2468L0.619104 13.4407L0.356747 12.6087L0.167908 11.7569L0.0540273 10.8919L0.0159709 10.0202L0.0540295 9.14857L0.167909 8.28357L0.356747 7.43178L0.619102 6.59969L0.952982 5.79363L1.35584 5.01974L1.82462 4.2839L2.35575 3.59173L2.94518 2.94847L3.58843 2.35904L4.28061 1.82791L5.01645 1.35914L5.79034 0.956275L6.5964 0.622394L7.42849 0.360038L8.28028 0.1712L9.14528 0.0573195L10.0169 0.0192628L10.8886 0.0573193L11.7536 0.1712L12.6054 0.360037L13.4374 0.622394L14.2435 0.956274L15.0174 1.35914L15.7532 1.82791L16.4454 2.35904L17.0887 2.94847L17.6781 3.59173L18.2092 4.2839L18.678 5.01974L19.0809 5.79363L19.4147 6.59969L19.6771 7.43178L19.8565 8.24094C19.976 8.78014 19.6358 9.31414 19.0966 9.43368Z" fill="#E0E0E0"/>
+        </svg>
+        </span>
+        <span style="color: #616161;">챗봇의 응답을 기다리는 중....</span>
+      </div>`
+    );
+          chatHistory.scrollTop = chatHistory.scrollHeight;
           setTimeout(() => {
+            const loadingDiv = document.getElementById('chat-loading-spin');
+            
+            if (loadingDiv) loadingDiv.remove();
             chatHistory.insertAdjacentHTML(
               'beforeend',
               `<div class="chat-msg">아직 백엔드 연결 전입니다 :) 아직 백엔드 연결 전입니다 :) 아직 백엔드 연결 전입니다 :) 아직 백엔드 연결 전입니다 :) 아직 백엔드 연결 전입니다 :) 아직 백엔드 연결 전입니다 :)</div>
@@ -345,7 +369,7 @@
             });
             chatHistory.appendChild(recommendDiv);
             chatHistory.scrollTop = chatHistory.scrollHeight;
-          }, 600);
+          }, 2000);
           input.value = "";
         }
       }
