profile_info editing

--- a/senpick/app/templates/profile/profile_info.html
+++ b/senpick/app/templates/profile/profile_info.html
@@ -63,7 +63,7 @@
 
                 <label>직업</label>
                 <div class="job-input">
-                  <input type="text" value="학생" readonly>
+                  <input type="text" value="학생/취준생">
                   <img src="{% static 'images/bottom_arrow.svg' %}" alt="드롭다운 화살표">
                 </div>
 
@@ -94,7 +94,9 @@
                   <button type="button" class="tag active">교환권</button>
                 </div>
 
-                <button type="submit" class="submit-button">프로필 수정 완료</button>
+                <div class="submit-button">
+                  <button type="submit">프로필 수정 완료</button>
+                </div>
               </form>
             </div>
           </div>
