--- a/senpick/static/css/mypage.css
+++ b/senpick/static/css/mypage.css
@@ -9,8 +9,8 @@ body {
 .layout {
   display: flex;
   width: 100%;
-  min-height: 100vh;
-  overflow-x: hidden;
+  height: 100vh;
+  overflow: hidden;
 }
 
 .mypage-container {
@@ -46,6 +46,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  overflow-y: scroll;
 }
 
 /* 수평 정렬을 위한 래퍼 */
