--- a/senpick/app/templates/profile/profile_delete.html
+++ b/senpick/app/templates/profile/profile_delete.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <link rel="stylesheet" href="{% static 'css/mypage.css' %}">
     <link rel="stylesheet" href="{% static 'css/profile_info.css' %}">
     <link rel="stylesheet" href="{% static 'css/profile_delete.css' %}">
@@ -12,7 +13,6 @@
     <link rel="stylesheet" href="{% static 'css/stepper.css' %}">
 
     <link href="https://fonts.googleapis.com/css2?family=Spoqa+Han+Sans+Neo:wght@400;500;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Cafe24+Supermagic&display=swap" rel="stylesheet">
 </head>
 <body>
     <div style="display: flex;" class="layout">
@@ -26,7 +26,8 @@
           <div class="profile-main-wrapper">
             <div class="center-card-container">
                   <div class="modal-card">
-                    <h2><b>Senpick의 어떤 점이 바뀌면 좋을까요?</b></h2>
+                    <h2><span class="font-b">Senpick</span><b>의 어떤 점이 바뀌면 좋을까요?</b></h2>
+                    <h3>탈퇴 사유</h3>
                     <div class="withdraw-reason" style="color: #666;">
                       <label class="step-option"><input type="checkbox" name="reason"> 추천 결과가 마음에 들지 않음</label>
                       <label class="step-option"><input type="checkbox" name="reason"> 사용할 일이 없음</label>
