--- a/senpick/static/css/style.css
+++ b/senpick/static/css/style.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: 'Cafe24Supermagic';
+  src: url("../fonts/Cafe24Supermagic-Bold-v1.0.woff") format('woff');
+}
+
 html, body {
     margin: 0;
     padding: 0;
@@ -12,4 +17,8 @@ h1 {
 .main-content {
     padding: 20px;
     width: 100%
+}
+
+.font-b {
+    font-family: 'Cafe24Supermagic', sans-serif;
 }
